--- a/app/caption.htm
+++ b/app/caption.htm
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div class="panel-body">
-        <a class=" col-md-4 btn btn-primary " style="font-size: 48px">
+        <a href="#main" class=" col-md-3 col-lg-2 btn btn-primary " style="font-size: 48px">
             Let's Go
         </a>
     </div>
