--- a/app/main.htm
+++ b/app/main.htm
@@ -1,23 +1,49 @@
-<h3 class="text-danger text-center">
-    第一關
-</h3>
-<div class="game-ground">
-    <div class="mission-area">
-        <h2 class="text-center" style="color: #001e55"><strong>任務區</strong></h2>
-        <img class="" src="images/tank.png" width="300px" alt="tank">
-        <img style="margin-top: 30px" src="images/001.png" width="650px" alt="line">
-    </div>
-    <div style="width: 100%;border: solid 1.5px #2b669a;"></div>
-    <div class="tip-area">
-        <img class="" src="images/shoot.png" width="500" height="400" alt="shoot">
-    </div>
-    <div style="height: 420px;border: solid 1.5px #2b669a; float: left"></div>
-    <div class="answer-area">
-        <h2 class="text-center" style="color: #9acfea"><strong>發射區</strong></h2>
-        <h3 class="text-center" style="color: #9cd28e"><strong>距離設定</strong></h3>
-        <input class="input-answer text-center" type="number">
-        <div class="gray-desk">
-            <img class="fire-button" src="images/btn-fire.png" width="150px" alt="fire-button">
+<div ng-controller="mainCtrl">
+    <h3 class="text-danger text-center">
+        第一關
+    </h3>
+    <div class="game-ground">
+        <div class="mission-area">
+            <h2 class="text-center" style="color: #001e55"><strong>任務區</strong></h2>
+            <img class="" src="images/tank.png" width="300px" alt="tank">
+            <img style="margin-top: 30px" src="images/001.png" width="650px" alt="line">
+        </div>
+        <div style="width: 100%;border: solid 1.5px #2b669a;"></div>
+        <div class="tip-area">
+            <img class="" src="images/shoot.png" width="500" height="400" alt="shoot" ng-show="showShoot">
+            <div class="te" ng-show="showSuccess">
+                <div class="dialog-frame">
+                    <h1 class="text-center text-primary"><strong>恭喜!!命中目標</strong></h1>
+                </div>
+                <img class="cursor-style" style="margin: 10px 175px" src="images/male-soldier-head.png" width="150"
+                     height="150" alt="head-img">
+                <p class="text-success text-center cursor-style"><strong>按我到下一關</strong></p>
+            </div>
+            <div class="" ng-show="showFail">
+                <div class="dialog-frame">
+                    <h1 class="text-center text-primary"><strong>好可惜!沒射中</strong></h1>
+                </div>
+                <img class="cursor-style" style="margin: 10px 175px" src="images/female-soldier-head.png" width="150"
+                     height="150" alt="head-img">
+                <p class="text-danger text-center cursor-style"><strong>按我到下一關</strong></p>
+            </div>
+            <div class="" ng-show="showTip">
+                <div class="dialog-frame">
+                    <h3 class="text-justify text-primary"><strong>提示:數線由0出發，越往右數值越大，上圖中每一格的距離都是1。</strong></h3>
+                </div>
+                <img class="cursor-style" style="margin: 10px 175px" src="images/female-soldier-head.png" width="150"
+                     height="150" alt="head-img">
+                <p class="text-danger text-center cursor-style"><strong>按我再試一次</strong></p>
+            </div>
+        </div>
+        <div style="height: 420px;border: solid 1.5px #2b669a; float: left"></div>
+        <div class="answer-area">
+            <h2 class="text-center" style="color: #9acfea"><strong>發射區</strong></h2>
+            <h3 class="text-center" style="color: #9cd28e"><strong>距離設定</strong></h3>
+            <input class="input-answer text-center" type="number">
+            <div class="gray-desk">
+                <img class="fire-button cursor-style" src="images/btn-fire.png" width="150px" alt="fire-button">
+            </div>
         </div>
     </div>
 </div>
