--- a/app/main.htm
+++ b/app/main.htm
@@ -24,16 +24,16 @@
                     <h1 class="text-center text-primary"><strong>好可惜!沒射中</strong></h1>
                 </div>
                 <img class="cursor-style" style="margin: 10px 175px" src="img/female-soldier-head.png" width="150"
-                     height="150" alt="head-img" ng-click="onTryAgain()">
-                <p class="text-danger text-center cursor-style"><strong>按我再試一次</strong></p>
+                     height="150" alt="head-img" ng-click="onTryAgain()" ng-show="showAgainBtn">
+                <p class="text-danger text-center cursor-style" ng-show="showAgainBtn"><strong>按我再試一次</strong></p>
             </div>
             <div class="" ng-show="showTip">
                 <div class="dialog-frame">
                     <h3 class="text-justify text-primary"><strong>{{point}}</strong></h3>
                 </div>
                 <img class="cursor-style" style="margin: 10px 175px" src="img/female-soldier-head.png" width="150"
-                     height="150" alt="head-img"  ng-click="onTryAgain()">
-                <p class="text-danger text-center cursor-style"><strong>按我再試一次</strong></p>
+                     height="150" alt="head-img"   ng-click="onTryAgain()" ng-show="showAgainBtn">
+                <p class="text-danger text-center cursor-style"  ng-show="showAgainBtn"><strong>按我再試一次</strong></p>
             </div>
         </div>
         <div style="height: 420px;border: solid 1.5px #2b669a; float: left"></div>
